@@ -2,7 +2,7 @@ AC_INIT(src/main.c)
 
 AM_CONFIG_HEADER(config.h)
 
-AM_INIT_AUTOMAKE(grip,2.98.0)
+AM_INIT_AUTOMAKE(grip,2.98.1)
 
 AM_MAINTAINER_MODE
 
